# ChangeLog for virtual/poppler-glib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/ChangeLog,v 1.12 2009/04/22 11:12:59 armin76 Exp $

  22 Apr 2009; Raúl Porcel <armin76@gentoo.org> poppler-glib-0.10.5.ebuild:
  arm/ia64/sh/sparc stable wrt #263028

  21 Apr 2009; Tobias Klausmann <klausman@gentoo.org> poppler-glib-0.10.5:
  Stable on alpha, bug #263028

  19 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> poppler-glib-0.10.5:
  Remove split popplers from consideration w.r.t. bug 266775.

  18 Apr 2009; Brent Baude <ranger@gentoo.org> poppler-glib-0.10.5.ebuild:
  Marking poppler-glib-0.10.5 ppc64 and ppc for bug 263028

  18 Apr 2009; Markus Meier <maekke@gentoo.org> poppler-glib-0.10.5:
  amd64/x86 stable, bug #263028

  18 Apr 2009; Jeroen Roovers <jer@gentoo.org> poppler-glib-0.10.5:
  Stable for HPPA (bug #263028).

*poppler-glib-0.10.6 (16 Apr 2009)

  16 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-glib-0.10.6.ebuild:
  Bump

  10 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  poppler-glib-0.8.7.ebuild, poppler-glib-0.10.4.ebuild,
  poppler-glib-0.10.5.ebuild:
  Turn cairo by default on. The cairo backend is superior and usable in all
  but one package.

  01 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  poppler-glib-0.8.7.ebuild, poppler-glib-0.10.4.ebuild,
  poppler-glib-0.10.5.ebuild:
  Update deps w.r.t. bug 264230

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  poppler-glib-0.8.7.ebuild, poppler-glib-0.10.4.ebuild,
  poppler-glib-0.10.5.ebuild:
  Updating dependencies to not pull in non-existant packages.

*poppler-glib-0.10.5 (29 Mar 2009)
*poppler-glib-0.10.4 (29 Mar 2009)
*poppler-glib-0.8.7 (29 Mar 2009)

  29 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> +metadata.xml,
  +poppler-glib-0.8.7.ebuild, +poppler-glib-0.10.4.ebuild,
  +poppler-glib-0.10.5.ebuild:
  Initial commit. Ebuild by me. To be used in the upcoming split-poppler