@@ -1,4 +1,5 @@
 EBUILD poppler-glib-0.10.5.ebuild 653 RMD160 94eb6b3b594cd4e7fc1ad01935ab786ccc1ec837 SHA1 9e4028683b947823da239ce81fc3b07ed798b209 SHA256 378e4ead66279ca6a5ce5aae7fd57c91c28f941862da95f88d88262c2387c979
 EBUILD poppler-glib-0.10.6.ebuild 645 RMD160 da0e69c4cb5a34befc4fac087f220b3737b6a1bb SHA1 09525c1a15ab690e81709dc4e60be2cce3d4008a SHA256 4bd6373230650096d7928894b3d558623d239f274bcb2fe4bd6fd9e682a2cc4e
-MISC ChangeLog 2006 RMD160 e2e67e39df72cf4cad38cab85e2011f71b7a60f1 SHA1 f8bbcffd2a1ab0fa6bf40718a0b99c650bf144cd SHA256 f1b1c16dd1a2eb02fd723d013407666aab4af2c3297a92075b257a2ec61fdcfb
+EBUILD poppler-glib-0.11.0.ebuild 645 RMD160 141f0812719f891704ece17377a5b93d1061782f SHA1 fb24361abbfb9f6f4a3ee017204669d7fd1ab10a SHA256 d12f106b46b70b4ef64a52ad6272046973a4674edfe20d17b03e17c49d49ebba
+MISC ChangeLog 2154 RMD160 7c5446822b0c45f5ebf4f92df01566393e95afd5 SHA1 91de4a8755199075ea82f7e10355df89ab8f788f SHA256 c7111d42bd939d9d786adf8e5355d457244349b79fcc17942432362bd22eadc0
 MISC metadata.xml 254 RMD160 e2af7df96e23f1a8f34c041859efe8d5b23ac7f0 SHA1 6d81483a9e1e502e7ee60b758f8136cc61a4af8e SHA256 14288b420c7d20adb5f3c4d70b643d0b9436e3aaadcbbdea199b119480b1e617
