@@ -1,0 +1,19 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/poppler-glib-0.11.0.ebuild,v 1.1 2009/05/12 12:05:29 loki_val Exp $
+
+EAPI=2
+
+DESCRIPTION="Virtual package, includes packages that contain libpoppler-glib.so"
+HOMEPAGE="http://poppler.freedesktop.org/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE="+cairo"
+
+PROPERTIES="virtual"
+
+RDEPEND="~dev-libs/poppler-glib-${PV}[cairo?]"
+DEPEND="${RDEPEND}"
