@@ -1,6 +1,12 @@
 # ChangeLog for virtual/poppler-glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/ChangeLog,v 1.12 2009/04/22 11:12:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/ChangeLog,v 1.13 2009/05/12 12:05:29 loki_val Exp $
+
+*poppler-glib-0.11.0 (12 May 2009)
+
+  12 May 2009; Peter Alfredsen <loki_val@gentoo.org>
+  +poppler-glib-0.11.0.ebuild:
+  Bump for poppler-0.11.0
 
   22 Apr 2009; Raúl Porcel <armin76@gentoo.org> poppler-glib-0.10.5.ebuild:
   arm/ia64/sh/sparc stable wrt #263028
